
nobase_include_HEADERS = ./muzzley/base/assert.h ./muzzley/log/log.h ./muzzley/exceptions/CastException.h ./muzzley/exceptions/SyntaxErrorException.h ./muzzley/exceptions/ParserEOF.h ./muzzley/exceptions/AssertionException.h ./muzzley/exceptions/NoAttributeNameException.h ./muzzley/exceptions/ClosedException.h ./muzzley/exceptions/InterruptedException.h ./muzzley/parsers/JSONLexerimpl.h ./muzzley/parsers/JSONTokenizerbase.h ./muzzley/parsers/JSONinc.h ./muzzley/parsers/JSONParser.h ./muzzley/parsers/JSONTokenizerLexer.h ./muzzley/parsers/JSONLexerbase.h ./muzzley/parsers/JSONLexer.h ./muzzley/parsers/json.h ./muzzley/parsers/JSONTokenizer.h ./muzzley/parsers/JSONTokenizerimpl.h ./muzzley/text/convert.h ./muzzley/text/manip.h ./muzzley/stream/SocketStreams.h ./muzzley/muzzley.h ./muzzley/resource/Client.h ./muzzley/json/JSONObj.h 